[gd_scene load_steps=6 format=3 uid="uid://i162xj5daemj"]

[ext_resource type="PackedScene" uid="uid://dujyne4urhw7k" path="res://player.tscn" id="1_2nifc"]
[ext_resource type="Script" uid="uid://bcf288wxl3lpn" path="res://Assets/level.gd" id="1_q4iis"]
[ext_resource type="PackedScene" uid="uid://cqfegfgwc0e0w" path="res://mob.tscn" id="2_wkftn"]
[ext_resource type="Texture2D" uid="uid://d00b0g5a6ldj2" path="res://Assets/Sprites/Background1.webp" id="3_q4iis"]

[sub_resource type="Curve2D" id="Curve2D_wkftn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1200, 0, 0, 0, 0, 0, 1200, 512, 0, 0, 0, 0, 0, 512, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1200, 0)
}
point_count = 5

[node name="Level" type="Node"]
script = ExtResource("1_q4iis")
mob_scene = ExtResource("2_wkftn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(599, 257)
texture = ExtResource("3_q4iis")

[node name="Player" parent="." instance=ExtResource("1_2nifc")]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(529, 284)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_wkftn")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(1200, 0)
rotation = 1.5708

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
